--- a/index.html
+++ b/index.html
@@ -195,18 +195,17 @@
 						<div class="item">
 							<div class="col-sm-6 col-md-6">
 								<div class="side-left">
-									<div class="info">
-										<h1 style="color:#fff";>Visión</h1>
-									</div>
+
 									<img src="assets/img/about-carousel/ciberfeminismos.png" alt="ciberfeminismo">
 								</div>
 							</div>
 							<div class="col-sm-6 col-md-6">
 								<div class="side-right">
+									<div class="info">
+										<h1 style="color:#fff; text-align:center;">Visión</h1>
+									</div>
 									<p style="color:#fff" ;>
-										Lograr expandir la comunidad de mujeres apasionadas por la programación y en el desarrollo de tecnologías libres en toda Venezuela. Dispuestas a una capacitación constante al mismo tiempo que comparten los conocimientos adquiridos con otras mujeres, con
-										la finalidad de mejorar sus vidas profesionales, impulsandolas a formar las bases de su propio emprendimiento tecnológico ú ofrecerles oportunidades para desarrollar proyectos en colectivo y dar respuesta al servicio para el cual se contrate a
-										la comunidad.
+										Expandir la comunidad de mujeres apasionadas por la programación y las tecnologías libres en toda Venezuela y a su vez ser un referente internacional de empoderamiento femenino
 									</p>
 								</div>
 							</div>
@@ -369,7 +368,7 @@
 		<section id="why-chose">
 			<div class="container">
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Actividades </span> de la Comunidad</h1>
-				<div class="row">
+				<div class="row" style="padding-bottom:30px;">
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="10" data-wow-delay="0.5s">
 						<div class="content-left">
 							<div class="box-left">
@@ -727,6 +726,31 @@
 	 	 	          </div>
 	 	 	        </div>
 	 	 	      </div>
+
+						<div class="col-sm-6 col-md-3 wow flipInY" data-wow-offset="10" data-wow-delay="0.2s">
+							<div class="item-square">
+								<div class="face">
+									<img src="assets/img/team-member/rails06.jpg" alt="Foto Germana Oliveira">
+									<div class="overlay"></div>
+								</div>
+								<div class="content">
+									<div class="title">
+										<h3>Germana Oliveira</h3>
+										<p>Info</p>
+									</div>
+									<div class="text">
+										<p>Texto</p>
+									</div>
+									<!--<div class="social-icons">
+								 <ul>
+									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								 </ul>
+								</div>-->
+								</div>
+							</div>
+						</div>
 	 	 	    </div>
 	 	 	  </div>
 	 	 	</section>
